# opencli-admin

./: .claude-project.md  .env.example  .env.nas.example  .gitignore  .gitleaks.toml  CLAUDE.md  CONTEXT.md  DESIGN.md  LIVE_WEBHOOK_ACCEPTANCE.md  PLAN_native_nodes_loop.md  PLAN_product_positioning.md  PLAN_realtime_tool_capabilities.md  PLAN_ui_reskin.md  PONYTAIL.md  README.md  README_HANDOVER.md  TESTING.md  TODOS.md  docker-compose.build.yml  docker-compose.yml  nx.json  package-lock.json  package.json  pyproject.toml  start.sh
.github/workflows/: ci.yml
.sentrux/: rules.toml
.tmp-iii-qs/quickstart/workers/math-worker/: iii.worker.yaml  pyproject.toml
.tmp-iii-qs/quickstart/workers/math-worker/src/: math_worker.py
.tmp-iii-scaffold/odp-scaffold/: Dockerfile
agent/: Dockerfile
backend/: agent_server.py  cli.py  config.py  main.py  mcp_server.py  ws_agent_manager.py
backend/agent_runtimes/: __init__.py  base.py  miniflow_adapter.py  opentabs_adapter.py  pi_adapter.py  registry.py
backend/auth/: __init__.py  cookiecloud_sync.py  crypto.py  manager.py
backend/channels/: api_channel.py  base.py  cli_channel.py  crawl4ai_channel.py  opencli_channel.py  registry.py  rss_channel.py  skill_channel.py  web_scraper_channel.py
backend/control/: __init__.py  actuator.py  aggregation.py  coverage.py  cycle.py  cycle_task.py  error_kinds.py  evaluator.py  gate.py  kill_switch.py  ledger.py  measurements.py  models.py  objectives.py  outcomes.py  policies.py  recorder.py  report.py  service.py  system_context.py
backend/miniflow/: __init__.py  audit.py  loader.py  model.py  runner.py
backend/models/: __init__.py  control_action.py  cookie_jar.py  edge_node.py  odp_system_measurement.py  plan.py  plan_health.py  plan_source_index.py  provider.py  skill.py  source.py  source_credential.py  source_cursor.py  source_measurement.py  workflow_run.py
backend/notifiers/: feishu_notifier.py  webhook_notifier.py  wecom_notifier.py
backend/odp/: __init__.py  mapper.py  schemas.py
backend/pipeline/: channel_runner.py  collector.py  cursor_store.py  domain_limiter.py  error_taxonomy.py  http_client.py  odp_client.py  pipeline.py  runner.py  storer.py
backend/plan_ir/: __init__.py  executor.py  presets.py  projection.py  transforms.py  validation.py
backend/processors/: external_http_processor.py  openai_processor.py
backend/schemas/: control.py  edge_node.py  odp_state.py  plan.py  plan_ir.py  provider.py  source.py  workflow.py
backend/security/: __init__.py  fleet_auth.py  url_guard.py
backend/services/: control_ledger_service.py  measurement_service.py  plan_health_service.py  plan_service.py  plan_trigger_service.py  source_service.py
backend/skills/: __init__.py  actions.py  correction.py  distill.py  loop.py  page.py  perception.py  prompt.py  risk.py  toolcall.py  trace.py
backend/worker/: tasks.py
backend/workflow/: __init__.py  block_reasons.py  capability_projection.py  compiler.py  demand_assembler.py  event_mirror.py  external_importer.py  fleet_inventory.py  hda_templates.py  node_registry.py  opencli_adapter_nodes.py  opencli_hda_tracer.py  patcher.py  realtime_market_executor.py  runtime_contracts.py  runtime_registry.py  tool_capabilities.py  turbopush_accounts.py  turbopush_errors.py  turbopush_executor.py  turbopush_runtime.py  webhook_delivery.py
chrome/extension-src/: project.json
contracts/: record_v2.schema.json
contracts/sql/: odp_records.sql
docs/: ARCHITECTURE.md  COLLECTION_OPERATIONS_CONSOLE.md  CONTROL_THEORY_ARCHITECTURE.md  DESIGN_SYSTEM.md  DEVELOPMENT_STANDARD.md  GLOSSARY.md  PLAN_odp_enterprise.md  PROJECT_MANAGEMENT.md  SURVEY_superset.md  control-closeout-PRD.md  design-audit-2026-07-02.md  frontend-template-references.md  opencli-admin-backend-system-map.md  plan-ir-PRD.md  ptt-acceptance.md  skills-execute-loop-PRD.md  workflow-hda-demand-runtime-PRD.md  workflow-node-capability-mapping.md  workflow-runtime-conformance.md
docs/adr/: 0001-use-flowgram-for-canvas-infrastructure.md  0002-use-accessible-operator-ui-foundations.md  0003-skill-execute-loop-architecture.md  0004-dangerous-control-actions-never-auto-execute.md  0005-fleet-lan-deployment-static-token-auth.md  0006-accept-crawl4ai-calltime-ssrf-risk.md  0007-dedicated-background-control-cycle.md  0008-collection-canvas-primary-authoring-surface.md  0009-plan-ir-free-graph-two-tier-attribution.md  0010-native-runtime-nodes-and-managed-external-graphs.md
docs/control-closeout-issues/: 01-prefactor-unified-decision-path.md  02-per-source-objective-override.md  03-control-cycle-actuator.md  04-fleet-auth-bearer-token.md  05-cli-channel-hardening.md  06-trend-fallback-pre-measurement-sources.md  07-topology-odp-node-action-history.md  08-pr4-frontend-review-gaps.md  09-gitea-push-fix.md
experiments/next-web/: Dockerfile  (+2 more)
frontend/: .dockerignore  .gitignore  Dockerfile  components.json  eslint.config.mjs  i18n-localization-audit.md  index.html  middleware.ts  next.config.mjs  next.config.ts  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  project.json  tailwind.config.js  tsconfig.json  vite.config.ts
iii/: README.md  config.yaml
iii/workers/collector-discord/: Dockerfile  iii.worker.yaml  pyproject.toml
iii/workers/collector-discord/src/: main.py
iii/workers/odp-ingest-bridge/: Dockerfile  iii.worker.yaml  pyproject.toml
iii/workers/odp-ingest-bridge/src/: main.py
iii/workers/schedule-bootstrap/: Dockerfile  iii.worker.yaml  pyproject.toml
iii/workers/schedule-bootstrap/src/: main.py
odp-rs/: Cargo.toml  Dockerfile.ingest  Dockerfile.store  README.md
odp-rs/crates/odp-bus/: Cargo.toml
odp-rs/crates/odp-bus/src/: lib.rs  redis_streams.rs
odp-rs/crates/odp-contracts/: Cargo.toml
odp-rs/crates/odp-contracts/src/: lib.rs
odp-rs/crates/odp-ingest/: Cargo.toml
odp-rs/crates/odp-ingest/src/: dedup.rs  handlers.rs  main.rs  state.rs
odp-rs/crates/odp-store/: Cargo.toml
odp-rs/crates/odp-store/src/: main.rs  reap.rs  writer.rs
scripts/: frontend.mjs  install-agent.sh  smoke-okx-realtime-collect.py
tests/: conftest.py
(+550 files in other folders)
