[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencli-admin"
version = "0.1.0"
description = "Multi-channel data collection management system"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    # HTTP client
    "httpx>=0.28.0",
    # Configuration
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    # Web scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    # RSS
    "feedparser>=6.0.0",
    # AI clients
    "anthropic>=0.40.0",
    "openai>=1.58.0",
    # Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    # Email
    "aiosmtplib>=3.0.0",
    # Utilities
    "tenacity>=9.0.0",
    "greenlet>=3.0.0",
    "structlog>=24.4.0",
    "python-dateutil>=2.9.0",
    "croniter>=3.0.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0.0",
    # Docker SDK (for chrome pool management via API)
    "docker>=7.0.0",
    # Browser automation (skill execute loop over CDP)
    "playwright>=1.40.0",
    "cryptography>=46.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-beautifulsoup4",
    "types-python-dateutil",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing --cov-fail-under=80"
markers = [
    "live: tests that require a running API server and opencli daemon, or a local Chrome reachable over CDP (deselect with -m 'not live')",
]

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
omit = [
    # Celery worker (requires Redis/broker at runtime)
    "backend/worker/tasks.py",
    "backend/worker/beat_schedule.py",
    "backend/worker/celery_app.py",
    # AI processors (require API keys)
    "backend/processors/claude_processor.py",
    "backend/processors/openai_processor.py",
    "backend/processors/local_processor.py",
    # Email notifier (requires SMTP config)
    "backend/notifiers/email_notifier.py",
    # ODP client (III integration, tested separately)
    "backend/pipeline/odp_client.py",
    # Agent server (complex WS/Chrome pool, integration tested)
    "backend/agent_server.py",
    # API routers (require full app context / DB)
    "backend/api/v1/browsers.py",
    "backend/api/v1/nodes.py",
    "backend/api/v1/system.py",
    "backend/api/v1/dashboard.py",
    "backend/database.py",
    "backend/main.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
