[project]
name = "odp-ingest-bridge"
version = "0.1.0"
description = "III worker — forwards Record v2 batches to Rust odp-ingest"
requires-python = ">=3.11"
dependencies = [
    "iii-sdk==0.19.4",
    "iii-observability==0.19.4",
    "httpx>=0.27.0",
    "watchfiles",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/main.py"]