[project]
name = "schedule-bootstrap"
version = "0.1.0"
description = "III worker — registers cron triggers for Discord collection"
requires-python = ">=3.11"
dependencies = [
    "iii-sdk==0.19.4",
    "iii-observability==0.19.4",
    "pyyaml>=6.0.0",
    "watchfiles",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/main.py"]