[package]
name = "odp-ingest"
description = "ODP high-throughput ingest API (Rust hot path)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "odp-ingest"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
odp-bus = { path = "../odp-bus" }
odp-contracts = { path = "../odp-contracts" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }